--- a/index.html
+++ b/index.html
@@ -11,28 +11,31 @@
     ></script>
   </head>
   <body>
+    <!-- Header Section -->
     <section class="header grid grid-cols-[1fr_2fr_1fr] text-blue-900 m-5">
-      <div class="logo flex">
+      <div class="logo flex cursor-pointer">
         <p class="mt-2 mr-2"><i class="fa-solid fa-cloud text-3xl"></i></p>
-        <h2 class="logo font-bold text-3xl">WeatherNow</h2>
+        <h2 class="logo font-bold text-3xl hidden lg:block">WeatherNow</h2>
       </div>
 
-      <div class="flex m-auto">
+      <div class="flex">
         <input
-          class="p-2 pl-4 outline-none border-2 border-white rounded-full w-[300px]"
+          class="p-2 pl-4 outline-none border-2 border-white rounded-full w-[75%]"
           type="text"
           placeholder="Enter city name"
           id="cityInput"
         />
         <button
-          class="border-1 border-blue-900 text-white p-2 rounded-full ml-2 w-20 bg-blue-900"
+          class="border-1 border-blue-900 text-white p-2 rounded-full ml-2 bg-blue-900 cursor-pointer"
           id="getWeatherBtn"
         >
           Search
         </button>
       </div>
-      <div class="text-end mt-2">
-        <button class="text-white">Use Current location</button>
+      <div class="text-end mt-2 cursor-pointer">
+        <button class="text-white cursor-pointer hidden lg:contents">
+          Use Current location
+        </button>
         <i class="fa-solid fa-location-pin location-icon"></i>
       </div>
     </section>
