Added forecast card section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Header Section -->
-    <section class="header grid grid-cols-[1fr_2fr_1fr] text-blue-900 mb-20">
+    <section class="header grid grid-cols-[1fr_2fr_1fr] text-blue-900 mb-10">
       <div class="logo flex cursor-pointer">
         <p class="mt-2 mr-2"><i class="fa-solid fa-cloud text-3xl"></i></p>
         <h2 class="logo font-bold text-3xl hidden lg:block">WeatherNow</h2>
@@ -60,6 +60,83 @@
           <p class="">Temperature</p>
           <p>Humidity</p>
           <p>Wind Speed</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Forecast Section -->
+    <section>
+      <h3 class="text-2xl font-semibold my-4">5-Days Forecast</h3>
+      <div class="grid grid-cols-2 gap-2 lg:grid-cols-5">
+        <div class="forecast-card border-2 rounded-2xl p-2">
+          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
+          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
+          <p class="text-black font-bold text-sm">Humidity</p>
+          <p class="text-black font-bold text-sm">Wind Speed</p>
+          <div>
+            <img
+              class="weather-icon m-auto"
+              src="./assets/sunny.png"
+              alt="logo"
+              width="45%"
+            />
+          </div>
+        </div>
+        <div class="forecast-card border-2 rounded-2xl p-2">
+          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
+          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
+          <p class="text-black font-bold text-sm">Humidity</p>
+          <p class="text-black font-bold text-sm">Wind Speed</p>
+          <div>
+            <img
+              class="weather-icon m-auto"
+              src="./assets/sunny.png"
+              alt="logo"
+              width="45%"
+            />
+          </div>
+        </div>
+        <div class="forecast-card border-2 rounded-2xl p-2">
+          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
+          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
+          <p class="text-black font-bold text-sm">Humidity</p>
+          <p class="text-black font-bold text-sm">Wind Speed</p>
+          <div>
+            <img
+              class="weather-icon m-auto"
+              src="./assets/sunny.png"
+              alt="logo"
+              width="45%"
+            />
+          </div>
+        </div>
+        <div class="forecast-card border-2 rounded-2xl p-2">
+          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
+          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
+          <p class="text-black font-bold text-sm">Humidity</p>
+          <p class="text-black font-bold text-sm">Wind Speed</p>
+          <div>
+            <img
+              class="weather-icon m-auto"
+              src="./assets/sunny.png"
+              alt="logo"
+              width="45%"
+            />
+          </div>
+        </div>
+        <div class="forecast-card border-2 rounded-2xl p-2">
+          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
+          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
+          <p class="text-black font-bold text-sm">Humidity</p>
+          <p class="text-black font-bold text-sm">Wind Speed</p>
+          <div>
+            <img
+              class="weather-icon m-auto"
+              src="./assets/sunny.png"
+              alt="logo"
+              width="45%"
+            />
+          </div>
         </div>
       </div>
     </section>
