Integrated API to get current weather details

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="">
       <div class="current-day lg:w-[45%] m-auto rounded-2xl p-5 text-white">
         <div class="text-center p-5">
-          <h3 class="text-2xl font-semibold">TODAY</h3>
+          <h3 class="current-date text-2xl font-semibold">TODAY</h3>
         </div>
         <div class="weather-values flex justify-evenly items-center">
           <h2 class="current-temperature text-5xl font-bold">15°C</h2>
@@ -77,9 +77,8 @@
           <p class="location text-2xl font-bold">Location</p>
         </div>
         <div class="weather-details text-center text-xl font-semibold p-5">
-          <p class="">Temperature</p>
-          <p>Humidity</p>
-          <p>Wind Speed</p>
+          <!-- <p class="current-humidity">Humidity</p>
+          <p class="wind-speed">Wind Speed</p> -->
         </div>
       </div>
     </section>
