Handled API errors

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     <section class="sm:hidden mb-10">
       <div class="flex justify-center items-center">
         <input
-          class="p-2 pl-4 outline-none border-2 border-white rounded-full w-[75%]"
+          class="location-input-mobile pl-4 outline-none border-2 border-white rounded-full w-[75%]"
           type="text"
           placeholder="Enter city name"
           id="cityInput"
         />
         <button
-          class="border-1 border-blue-900 text-white p-2 rounded-full ml-2 bg-blue-900 cursor-pointer"
+          class="search-button-mobile border-blue-900 text-white p-2 rounded-full ml-2 bg-blue-900 cursor-pointer"
           id="getWeatherBtn"
         >
           Search
