--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           id="cityInput"
         />
         <button
-          class="search-button-mobile border-blue-900 text-white p-2 rounded-full ml-2 bg-blue-900 cursor-pointer"
+          class="search-button-mobile border-1 border-blue-900 text-white p-2 rounded-full ml-2 bg-blue-900 cursor-pointer"
           id="getWeatherBtn"
         >
           Search
@@ -76,10 +76,9 @@
           />
           <p class="location text-2xl font-bold">Location</p>
         </div>
-        <div class="weather-details text-center text-xl font-semibold p-5">
-          <!-- <p class="current-humidity">Humidity</p>
-          <p class="wind-speed">Wind Speed</p> -->
-        </div>
+        <div
+          class="weather-details text-center text-xl font-semibold p-5"
+        ></div>
       </div>
     </section>
 
