Integrated forecast api

--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
         </div>
         <div class="weather-values flex justify-evenly items-center">
           <h2 class="current-temperature text-5xl font-bold">15°C</h2>
-          <img
-            class="weather-icon"
-            src="./assets/sunny.png"
-            alt="logo"
-            width="20%"
-          />
+          <img class="weather-icon" alt="logo" width="20%" />
           <p class="location text-2xl font-bold">Location</p>
         </div>
         <div
@@ -85,78 +80,9 @@
     <!-- Forecast Section -->
     <section>
       <h3 class="text-2xl font-semibold my-4">5-Days Forecast</h3>
-      <div class="grid grid-cols-2 gap-2 lg:grid-cols-5">
-        <div class="forecast-card border-2 rounded-2xl p-2">
-          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
-          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
-          <p class="text-black font-bold text-sm">Humidity</p>
-          <p class="text-black font-bold text-sm">Wind Speed</p>
-          <div>
-            <img
-              class="weather-icon m-auto"
-              src="./assets/sunny.png"
-              alt="logo"
-              width="45%"
-            />
-          </div>
-        </div>
-        <div class="forecast-card border-2 rounded-2xl p-2">
-          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
-          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
-          <p class="text-black font-bold text-sm">Humidity</p>
-          <p class="text-black font-bold text-sm">Wind Speed</p>
-          <div>
-            <img
-              class="weather-icon m-auto"
-              src="./assets/sunny.png"
-              alt="logo"
-              width="45%"
-            />
-          </div>
-        </div>
-        <div class="forecast-card border-2 rounded-2xl p-2">
-          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
-          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
-          <p class="text-black font-bold text-sm">Humidity</p>
-          <p class="text-black font-bold text-sm">Wind Speed</p>
-          <div>
-            <img
-              class="weather-icon m-auto"
-              src="./assets/sunny.png"
-              alt="logo"
-              width="45%"
-            />
-          </div>
-        </div>
-        <div class="forecast-card border-2 rounded-2xl p-2">
-          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
-          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
-          <p class="text-black font-bold text-sm">Humidity</p>
-          <p class="text-black font-bold text-sm">Wind Speed</p>
-          <div>
-            <img
-              class="weather-icon m-auto"
-              src="./assets/sunny.png"
-              alt="logo"
-              width="45%"
-            />
-          </div>
-        </div>
-        <div class="forecast-card border-2 rounded-2xl p-2">
-          <h2 class="text-center text-black font-semibold">12-11-2025</h2>
-          <p class="text-4xl font-semibold text-center text-white my-2">20°C</p>
-          <p class="text-black font-bold text-sm">Humidity</p>
-          <p class="text-black font-bold text-sm">Wind Speed</p>
-          <div>
-            <img
-              class="weather-icon m-auto"
-              src="./assets/sunny.png"
-              alt="logo"
-              width="45%"
-            />
-          </div>
-        </div>
-      </div>
+      <div
+        class="forecast-card-container grid grid-cols-2 gap-2 lg:grid-cols-5"
+      ></div>
     </section>
   </body>
 </html>
