Integrated API to get current location weather details

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           Search
         </button>
       </div>
-      <div class="text-end mt-2 cursor-pointer absolute right-5">
+      <div
+        class="current-location-container text-end mt-2 cursor-pointer absolute right-5"
+      >
         <button class="text-white cursor-pointer sm:hidden lg:contents">
           Current location
         </button>
