Added custom dropdown

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
 
       <div
-        class="search flex justify-center items-center text-center hidden sm:block"
+        class="search relative flex justify-center items-center text-center hidden sm:block"
       >
         <input
           class="location-input p-2 pl-4 outline-none border-2 border-white rounded-full w-[75%]"
@@ -34,6 +34,7 @@
         >
           Search
         </button>
+        <div class="custom-options"></div>
       </div>
       <div
         class="current-location-container text-end mt-2 cursor-pointer absolute right-5"
