Added temperature alerts

--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
     </section>
 
     <!-- Weather Section -->
-    <section class="">
+    <section class="current-weather">
       <div class="current-day lg:w-[45%] m-auto rounded-2xl p-5 text-white">
         <div class="text-center p-5">
           <h3 class="current-date text-2xl font-semibold">TODAY</h3>
         </div>
         <div class="weather-values flex justify-evenly items-center">
+          <div class="weather-alert">
+            <!-- <p class="temp-alert">
+              Extreme heat warning! Stay indoors and hydrated. 🥵
+            </p> -->
+          </div>
           <h2 class="current-temperature text-5xl font-bold">15°C</h2>
           <img class="weather-icon" alt="logo" width="20%" />
           <p class="location text-2xl font-bold">Location</p>
